<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar_profile"
        android:layout_gravity="right"
        android:theme="@style/ToolbarColoredBackArrow"
        />

    <TextView
        android:id="@+id/txt_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_password"
        android:layout_marginTop="100dp"
        android:textSize="25dp"
        android:textColor="@color/colorWhite"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/tips_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tips_password"
        android:layout_below="@+id/txt_pass"
        android:textSize="10dp"
        android:gravity="center"
        android:textColor="@color/colorWhite"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tips_pass"
        android:layout_margin="20dp"
        android:text="@string/pass"
        android:textColor="@color/colorWhite"
        android:textSize="12dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="180dp"
        app:passwordToggleTint="@color/colorWhite"
        app:passwordToggleEnabled="true"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/tv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pass"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:backgroundTint="@color/colorWhite"
            android:padding="5dp"
            android:inputType="textPassword"
            android:textColor="@color/colorWhite"
            android:textSize="13dp"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnNextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_pass"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="280dp"
        android:background="@color/colorWhite"
        android:textColor="@color/colorPrimary"
        android:textSize="15dp"/>

</RelativeLayout>